# uprusty

./: .env  .gitignore  Cargo.toml  README.md
examples/: accounts_usage.rs  attachments_usage.rs  basic_usage.rs  categories_usage.rs  tags_usage.rs  transactions_usage.rs  webhook_usage.rs
src/: client.rs  endpoints.rs  error.rs  lib.rs  models.rs  types.rs  webhook.rs
src/endpoints/: accounts.rs  attachments.rs  categories.rs  tags.rs  transactions.rs  webhooks.rs
src/models/: account.rs  attachment.rs  category.rs  tags.rs  transaction.rs  webhooks.rs
src/types/: money.rs  responses.rs
