[package]
name = "uprusty"
version = "0.1.0"
edition = "2024"
authors = ["pixam github@pixelizedambitions.com"]
license = "MIT"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0.140"
url = "2.5.4"
dotenv = "0.15"


[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"


